--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "algoliasearch": "^4.1.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
+    "gatsby-plugin-algolia-search": "^0.5.0",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.2",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-styled-components": "^3.2.3",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-remark-images": "^3.2.4",
     "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-remark-prismjs": "^3.4.3",
@@ -19,6 +23,7 @@
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.3",
     "gatsby-transformer-sharp": "^2.4.3",
+    "gsap": "^3.2.6",
     "lazysizes": "^5.2.0",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
@@ -26,8 +31,10 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-instantsearch-dom": "^6.4.0",
     "styled-components": "^5.1.0",
-    "styled-icons": "^10.2.1"
+    "styled-icons": "^10.2.1",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
