--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,10 @@ backend:
   name: github
   repo: inaldobrandao/my-blog
   branch: master
+  api_root: https://api.github.com
   site_domain: https://inaldobrandao.netlify.app
+  base_url: https://api.netlify.com
+  auth_endpoint: auth
 
 publish_mode: editorial_workflow
 
